cassandra/4.0/modules/ROOT/pages/cassandra-connector-studio.adoc
= Using Anypoint Studio to Configure Apache Cassandra Connector 4.0 - Mule 4
:page-aliases: connectors::cassandra/cassandra-connector-studio.adoc, page-aliases: connectors::cassandra/cassandra-connector-design-center.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

* <<create-mule-project,Create a Mule project>>.
* <<add-connector-to-project,Add the connector to your Mule project>>.
* <<configure-input-source,Configure a source for the connector's flow>>.
* <<add-connector-operation,Add a connector operation to the flow>>.
* <<configure-global-element,Configure a global element for the connector>>.
* <<configure-other-fields,Configure the other connector fields>>.

When you run the connector, you can view the app log to check for problems, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:cassandra-connector-reference.adoc[Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Apache Cassandra Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and to add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In the *Add Dependencies to Project* window, type `cassandra` in the search field.
. Click *CassandraDB* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.
You can configure one of these sources to use with Apache Cassandra Connector:

* *HTTP Listener*
+
Initiates a flow each time it receives a request on the configured host and port
* *Scheduler*
+
Initiates a flow when a time-based condition is met

For example, to configure an HTTP listener, follow these steps:

. In the *Mule Palette* view, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (*+*) next to the *Connector configuration* field to configure a global element that can be used by all instances of the HTTP listener in the app.
. On the *General* tab, specify the connection information for the listener.
. On the *TLS* tab, optionally specify the TLS information for the listener.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform.

To add an operation for Apache Cassandra Connector, follow these steps:

. In the *Mule Palette* view, select *CassandraDB* and then select the desired operation.
. Drag the operation onto the Studio canvas and to the right of the source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use. If an Apache Cassandra database has authentication enabled, you must provide credentials when accessing it from the connector. Apache Cassandra supports basic authentication only. To provide credentials to an Apache Cassandra database, enter the corresponding values in the Apache Cassandra Connector global element.

To configure the global element for Apache Cassandra Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, complete the following fields:
+
[%header,cols="30s,70a"]
|===
|Field a|Description
|Host | Host name, or IP address of an Apache Cassandra node
|Port | Port number. The default port is `9042`.
|===
+
If the target database has authentication enabled, you must also complete these fields:
+
[%header,cols="30s,70a"]
|===
|Field a|Description
|Keyspace | Apache Cassandra keyspace
|Username | Apache Cassandra user name
|Password | Apache Cassandra password
|===
+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
+
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Optionally, configure a connection that uses Mutual TLS by completing these fields on the Security tab:
+
[%header,cols="30s,70a"]
|===
|Field |Description
|Endpoint Identification Algorithm | The endpoint identification algorithm used by clients to validate server host name. The default value is an empty string, which means it is disabled. Clients, including client connections created by the broker for inter-broker communication, verify that the broker host name matches the host name in the brokers certificate.
|TLS Configuration | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then, at a minimum, the user must configure the keystore in the `tls:context` child element of the `listener-config`.
|===
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[configure-other-fields]]
== Configure Additional Connector Fields

After you configure a global element for Apache Cassandra Connector, configure the the other required fields for the connector. The required fields vary depending on which connector operation you use.

[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also view the app log in the default location `MULE_HOME/logs/<app-name>.log`.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
